# fancy_print

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
fancy_print/: __init__.py  fancy_print.py
tests/: test_fancy_print.py  test_wicked_print.py
wicked_print/: __init__.py  wicked_print.py
