[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fancy_print"
version = "0.1.0"
description = "Tiny utility that prints colorful strings one character at a time."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Zhaolun Zou" }]
keywords = ["print", "terminal", "typing", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/fancy_print"
Issues = "https://github.com/yourname/fancy_print/issues"

[project.scripts]
fancy_print = "fancy_print.fancy_print:main"

[tool.setuptools]
packages = ["fancy_print"]
license-files = ["LICENSE"]
